<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SetupSearchActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/search_parameters"
        android:textSize="24sp"
        tools:text="@string/search_parameters" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:paddingRight="8dp"
        android:rowCount="5"
        tools:context=".activities.SetupSearchActivity">

        <TextView
            android:id="@+id/tvBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:paddingRight="8dp"
            android:text="@string/begin_date"
            tools:text="@string/begin_date"
            android:textSize="16sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                tools:text="begin_date" />

            <Button
                android:id="@+id/butBeginDate"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ellipse"
                android:textSize="24sp"
                android:onClick="showDatePickerDialog" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:text="@string/end_date"
            tools:text="@string/end_date"
            android:textSize="16sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:inputType="date"
                tools:text="end_date" />

            <Button
                android:id="@+id/butEndDate"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ellipse"
                android:textSize="24sp"
                android:onClick="showDatePickerDialog" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:paddingTop="5dp"
            android:text="@string/categories"
            tools:text="@string/categories"
            android:textSize="16sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/cbFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion" />

            <CheckBox
                android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="3"
            android:paddingRight="8dp"
            android:text="@string/sort_order"
            tools:text="@string/sort_order"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_row="3" />

        <CheckBox
            android:id="@+id/cbHighlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/show_highlights" />


    </GridLayout>

</LinearLayout>